Fix Overflow

--- a/src/style/homeOG/style.css
+++ b/src/style/homeOG/style.css
@@ -749,7 +749,7 @@ i {
     }
     mc-hero img.float.right {
         width:10%;
-
+        padding:unset;
     }
     mc-hero img.float.left{
         left:0%;
